[package]
name = "triage-tracker"
version = "0.1.0"
authors = ["Ryan Levick <me@ryanlevick.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.6", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0"
clap = "2.0"
tui = "0.15"
termion = "1.5"
log = "0.4"

